<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Place Its</string>
    <string name="action_settings">Settings</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="title">Title: </string>
    <string name="description">Description: </string>
    <string name="place_it">Place It</string>
    <string name="cancel">Cancel</string>
    <string name="on_schedule">On Schedule</string>
    <string name="user_name_hint">Enter user name</string>
    <string name="password_hint">Enter password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="password_confirm_hint">Confirm password</string>
    <string name="create_category_place_it">Create Category Place It</string>
    <string-array name="schedule_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="Activeinactivelistoptions">
        <item >Active</item>
        <item >Inactive</item>
    </string-array>
    <string-array name="category_array">
        <item>None</item>
        <item>Accounting</item>
        <item>Airport</item>
        <item>Amusement Park</item>
        <item>Aquarium</item>
        <item>Art Gallery</item>
        <item>ATM</item>
        <item>Bakery</item>
        <item>Bank</item>
        <item>Bar</item>
        <item>Beauty Salon</item>
        <item>Bicycle Store</item>
        <item>Book Store</item>
        <item>Bowling Alley</item>
        <item>Bus Station</item>
        <item>Cafe</item>
        <item>Campground</item>
        <item>Car Dealer</item>
        <item>Car Rental</item>
        <item>Car Repair</item>
        <item>Car Wash</item>
        <item>Casino</item>
        <item>Cemetery</item>
        <item>Church</item>
        <item>City Hall</item>
        <item>Clothing Store</item>
        <item>Convenience Store</item>
        <item>Courthouse</item>
        <item>Dentist</item>
        <item>Department Store</item>
        <item>Doctor</item>
        <item>Electrician</item>
        <item>Electronics Store</item>
        <item>Finance</item>
        <item>Fire Station</item>
        <item>Florist</item>
        <item>Food</item>
        <item>Funeral Home</item>
        <item>Furniture Store</item>
        <item>Gas Station</item>
        <item>General Contractor</item>
        <item>Grocery or Supermarket</item>
        <item>Gym</item>
        <item>Hair Care</item>
        <item>Hardware Store</item>
        <item>Health</item>
        <item>Hindu Temple</item>
        <item>Home Goods Store</item>
        <item>Hospital</item>
        <item>Insurance Agency</item>
        <item>Jewelry Store</item>
        <item>Laundry</item>
        <item>Lawyer</item>
        <item>Library</item>
        <item>Liquor Store</item>
        <item>Local Government Office</item>
        <item>Locksmith</item>
        <item>Lodging</item>
        <item>Meal Delivery</item>
        <item>Meal Takeaway</item>
        <item>Mosque</item>
        <item>Movie Rental</item>
        <item>Movie Theater</item>
        <item>Moving Company</item>
        <item>Museum</item>
        <item>Night Club</item>
        <item>Painter</item>
        <item>Park</item>
        <item>Parking</item>
        <item>Pet Store</item>
        <item>Pharmacy</item>
        <item>Physiotherapist</item>
        <item>Place of Worship</item>
        <item>Plumber</item>
        <item>Police</item>
        <item>Post Office</item>
        <item>Real Estate Agency</item>
        <item>Restaurant</item>
        <item>Roofing Contractor</item>
        <item>RV Park</item>
        <item>School</item>
        <item>Shoe Store</item>
        <item>Shopping Mall</item>
        <item>Spa</item>
        <item>Stadium</item>
        <item>Storage</item>
        <item>Subway Station</item>
        <item>Synagogue</item>
        <item>Taxi Stand</item>
        <item>Train Station</item>
        <item>Travel Agency</item>
        <item>University</item>
        <item>Veterinary Care</item>
        <item>Zoo</item>
    </string-array>

</resources>
