<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	
    <EditText
        android:id="@+id/password_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:layout_below="@+id/user_name_edit" 
        android:layout_alignLeft="@+id/user_name_edit"
        android:inputType="textPassword"
        android:paddingTop="5dp" />
    
    <EditText
        android:id="@+id/password_confirm_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password_confirm_hint"
        android:layout_below="@+id/password_edit" 
        android:layout_alignLeft="@+id/user_name_edit"
        android:inputType="textPassword"
        android:paddingTop="5dp" />
        
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/password_edit"
        android:layout_below="@+id/password_confirm_edit"
        android:layout_marginTop="14dp"
        android:paddingTop="5dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cancel_button"
        android:layout_alignBottom="@+id/cancel_button"
        android:layout_alignLeft="@+id/password_edit"
        android:paddingTop="5dp"
        android:text="@string/sign_up" />

    <EditText
        android:id="@+id/user_name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="122dp"
        android:ems="10"
        android:hint="@string/user_name_hint" />
    
</RelativeLayout>
