<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/titleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="32dp"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/descriptionView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/titleView"
            android:layout_below="@+id/titleView"
            android:layout_marginTop="14dp"
            android:text="@string/description"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/descriptionView"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="18dp"
            android:layout_toRightOf="@+id/titleView"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/placeItBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/checkBox1"
            android:layout_below="@+id/schedule_spinner"
            android:layout_marginTop="16dp"
            android:text="@string/place_it" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           	android:layout_below="@+id/schedule_spinner"
            android:layout_alignBaseline="@+id/placeItBtn"
            android:layout_alignRight="@+id/editTitle"
            android:text="@string/cancel" />

        <EditText
            android:id="@+id/editDescriptionView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/descriptionView"
            android:layout_alignRight="@+id/editTitle"
            android:layout_below="@+id/descriptionView"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:minLines="2"
            android:scrollbars="vertical" >
        </EditText>

        <Spinner
            android:id="@+id/schedule_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox1"
            android:layout_marginTop="16dp"
            android:layout_alignLeft="@+id/checkBox1" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/titleView"
            android:layout_below="@+id/editDescriptionView"
            android:layout_marginTop="16dp"
            android:text="@string/on_schedule" />

    </RelativeLayout>

</ScrollView>